--- a/public/style/style.css
+++ b/public/style/style.css
@@ -7,14 +7,8 @@ body,html {
 	width: 100%;
 	height: 100%;
 	margin: 0 auto;
-	font-family: Lato,sans-serif;
+	font-family: 'IBM Plex Sans';
 	color: #283D56;
-}
-
-/* header footer common */
-header, footer {
-	width: 100%;
-	text-align: center;
 }
 
 .container {
