--- a/views/chat.html
+++ b/views/chat.html
@@ -3,21 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <title>Watson Conversation (ChatBot)</title>
+        <link rel="stylesheet" href="https://unpkg.com/carbon-components/css/carbon-components.min.css">
         <link rel="stylesheet" type="text/css" href="/style/custom.css" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="/scripts/chat.js" type="text/javascript"></script>
+        <script src="https://unpkg.com/carbon-components/scripts/carbon-components.min.js" type="text/javascript" async></script>
     </head>
     <body>
-        <div class="header">
-            <p></p>
-        </div>
-        <div class="main">
-            <p></p>
-        </div>
-        <div class="footer">
-            <p></p>
-        </div>
         <div class="chat-popup" id="chat-popup">
             <div class="chat-header">Converse com o Watson!</div>
             <div class="chat-body" id="chat-body">
