--- a/public/style/custom.css
+++ b/public/style/custom.css
@@ -5,11 +5,11 @@ body {
     height: 100%;
     margin: 0;
     padding: 0;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'IBM Plex Sans';
 }
 
 body {
-    background-image: url(../images/pizza.jpg);
+    background-image: url(../images/background-image.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
@@ -17,7 +17,12 @@ body {
     justify-content: space-between;
 }
 
-.container {}
+body::before{
+    content: '';
+    width: 100%;
+    height: 100%;
+    background-color: #1a1a1a80;
+}
 
 .header {
     height: 10%;
@@ -42,7 +47,8 @@ body {
     right: 0;
     bottom: 0;
     background-color: rgba(255, 255, 255, 0.22);
-    width: 310px;
+    width: 30vw;
+    min-width: 350px;
     height: 40px;
     border-top-left-radius: 4px;
     animation-duration: 1s;
@@ -81,6 +87,7 @@ body {
     align-items: center;
     cursor: pointer;
     width: 100%;
+    font-weight: bold;
 }
 
 .chat-popup .chat-body {
@@ -92,7 +99,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    height: 80%;
+    height: 85%;
     overflow-y: scroll;
     padding-top: 10px;
 }
@@ -152,7 +159,8 @@ body {
     padding: 13px 14px;
     border-radius: 5px;
     margin-bottom: 10px;
-    font-size: 14px;
+    font-size: 1rem;
+    line-height: 1.15rem;
     max-width: 78%;
 }
 
@@ -169,14 +177,14 @@ body {
 
 .chat-popup .chat-body .bubble.watson {
     color: #fff;
-    background-color: #00b0ff;
+    background-color: #0f62fe;
     align-self: flex-start;
     margin-left: 20px;
 }
 
 .chat-popup .chat-body .bubble.watson:before {
     left: -18px;
-    background-color: #00b0ff;
+    background-color: #0f62fe;
 }
 
 .chat-popup .chat-body .bubble.user:before {
@@ -201,7 +209,7 @@ body {
     animation-name: show_chat;
     border: 1px solid #e6e6e6;
     background-color: #eceff1;
-    font-family: 'Source Sans Pro',sans-serif;
+    font-family: 'IBM Plex Sans';
     font-weight: 300;
     font-size: 16px;
     height: 32px;
