--- a/public/style/custom.css
+++ b/public/style/custom.css
@@ -58,6 +58,8 @@ body::before{
     border-width: 1px 1px 0px 1px;
     border-style: solid;
     border-color: #e6e6e6;
+    display: flex;
+    flex-flow: column;
 }
 
 @keyframes popup_open {
@@ -99,7 +101,7 @@ body::before{
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    height: 85%;
+    flex-grow: 2;
     overflow-y: scroll;
     padding-top: 10px;
 }
@@ -212,7 +214,8 @@ body::before{
     font-family: 'IBM Plex Sans';
     font-weight: 300;
     font-size: 16px;
-    height: 32px;
+    min-height: 32px;
+    padding: 0.35rem 0;
     display: flex;
     flex-direction: row;
 }
