--- a/views/chat.html
+++ b/views/chat.html
@@ -11,6 +11,9 @@
         <script src="https://unpkg.com/carbon-components/scripts/carbon-components.min.js" type="text/javascript" async></script>
     </head>
     <body>
+        <div class="neon-header">
+            <h1>Pizzaria Cognitiva</h1>
+        </div>
         <div class="chat-popup" id="chat-popup">
             <div class="chat-header">Converse com o Watson!</div>
             <div class="chat-body" id="chat-body">
